[project]
name = "fintrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pydantic>=2.11.7",
    "uvicorn>=0.34.3",
    "fastapi[standard]>=0.115.13",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.1.1"
]

prod = [
    "pydantic>=2.11.7",
    "uvicorn>=0.34.3",
    "fastapi[standard]>=0.115.13",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.1.1"
]